Disable uppercase in main menu

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -144,7 +144,7 @@ video::-webkit-media-controls {
 
 .cd-slider-nav ul li h6 {
   font-size: 14px;
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
   text-align: center;
   font-weight: 400;
   color: #fff;
