--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -45,6 +45,11 @@ video::-webkit-media-controls {
   background-color: rgba(0,0,0,0.75); /*dim the background*/
 }
 
+.primary-button {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
 .primary-button a {
   display: inline-block;
   background-color: #29c6e9;
@@ -57,6 +62,10 @@ video::-webkit-media-controls {
   width: 200px;
   height: 50px;
   margin-bottom: 20px;
+}
+
+.primary-button.small a {
+  width: 120px;
 }
 
 .primary-button a:hover {
